@@ -1,5 +1,6 @@
 Version 6.9.7
 - Fixed infinite loop when CORDIC and Read/Write optimizations fight
+- Allow `#foo+CONST` for inline assembly when `foo` is a HUB label
 
 Version 6.9.6
 - Added a peephole for some address calculations (as suggested by Evan)
